--- a/forex-mtl/src/main/resources/application.conf
+++ b/forex-mtl/src/main/resources/application.conf
@@ -1,8 +1,13 @@
 app {
   http {
     host = "0.0.0.0"
-    port = 8080
+    port = 8081
     timeout = 40 seconds
+  }
+
+  one-frame-client {
+    uri = "http://0.0.0.0:8080"
+    token = "10dc303535874aeccc86a8251e6992f5"
   }
 }
 
